--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "description": "heck",
   "main": "dist/server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tslint": "tslint -c tslint.json server/**/*.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CrazyGuy108/HckTheSystem.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/CrazyGuy108/HckTheSystem/issues"
   },
-  "homepage": "https://github.com/CrazyGuy108/HckTheSystem#readme"
+  "homepage": "https://github.com/CrazyGuy108/HckTheSystem#readme",
+  "dependencies": {
+    "@types/express": "^4.16.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3"
+  }
 }
