--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "jsupm_mic": "*"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CrazyGuy108/HckTheSystem.git"
