--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "jsupm_mic": "*"
+    "node-grovepi": "*"
   },
   "repository": {
     "type": "git",
