--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "homepage": "https://github.com/CrazyGuy108/HckTheSystem#readme",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "@types/natural": "^0.2.33",
     "@types/socket.io": "^1.4.38",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "natural": "^0.6.1",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
